--- a/package.json
+++ b/package.json
@@ -9,14 +9,45 @@
     "start": "next start -p 3002",
     "lint": "next lint",
     "lint:css": "stylelint '**/*.css'",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "type-check": "tsc --noEmit",
     "test": "jest",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:e2e": "cypress run",
     "test:e2e:open": "cypress open",
     "generate-sitemap": "node scripts/generate-sitemap.js",
     "api": "node api-server.js",
-    "api:dev": "nodemon api-server.js"
+    "api:dev": "nodemon api-server.js",
+    "deploy": "./scripts/deploy.sh",
+    "deploy:staging": "./scripts/deploy.sh staging",
+    "deploy:production": "./scripts/deploy.sh production",
+    "deploy:frontend": "./scripts/deploy.sh production frontend",
+    "deploy:backend": "./scripts/deploy.sh production backend",
+    "deploy:hotfix": "./scripts/deploy.sh production all --skip-tests",
+    "docker:build": "docker build -t digiclick-ai .",
+    "docker:run": "docker run -p 3000:3000 digiclick-ai",
+    "docker:dev": "docker-compose up --build",
+    "docker:prod": "docker-compose -f docker-compose.prod.yml up --build",
+    "health-check": "curl -f http://localhost:3000/api/health || exit 1",
+    "setup": "node scripts/setup-env.js",
+    "setup:production": "NODE_ENV=production node scripts/setup-env.js",
+    "validate-env": "node -e \"require('./utils/env-validation').validateAndExit()\"",
+    "precommit": "lint-staged",
+    "prepare": "husky install",
+    "test:cursor": "jest tests/cursor.test.js",
+    "test:layout": "jest tests/layout.test.js",
+    "check:cursor": "node scripts/check-cursor.js",
+    "deploy:vercel": "node scripts/deploy.js vercel",
+    "deploy:netlify": "node scripts/deploy.js netlify",
+    "deploy:skip-tests": "node scripts/deploy.js vercel --skip-tests",
+    "build:analyze": "ANALYZE=true npm run build",
+    "sitemap:generate": "node scripts/generate-sitemap.js",
+    "performance:test": "lighthouse http://localhost:3000 --output=json --output-path=./reports/lighthouse.json",
+    "cursor:demo": "echo 'Visit http://localhost:3000/cursor-demo to test cursor functionality'",
+    "postbuild": "npm run sitemap:generate"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
