--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "@notionhq/client": "^2.3.0",
     "@stripe/stripe-js": "^7.2.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.21",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.1",
@@ -103,6 +106,7 @@
     "tailwindcss": "^4.1.5",
     "telegraf": "^4.16.3",
     "twilio": "^4.11.0",
+    "typescript": "^5.3.3",
     "xlsx": "^0.18.5",
     "yup": "^1.3.2",
     "zustand": "^4.4.7"
