--- a/package.json
+++ b/package.json
@@ -48,6 +48,11 @@
     "test:cross-device": "node tests/cross-device/device-tests.js",
     "test:all": "npm run test && npm run test:performance && npm run test:e2e && npm run test:accessibility",
     "check:cursor": "node scripts/check-cursor.js",
+    "deploy:verify": "node scripts/verify-deployment.js",
+    "deploy:monitor": "node scripts/deployment-monitor.js",
+    "deploy:health": "curl -f $NEXT_PUBLIC_APP_URL/api/health-check",
+    "lighthouse": "lighthouse-ci autorun --config=.lighthouserc.json",
+    "performance:check": "npm run lighthouse && npm run deploy:verify",
     "deploy:vercel": "node scripts/deploy.js vercel",
     "deploy:netlify": "node scripts/deploy.js netlify",
     "deploy:skip-tests": "node scripts/deploy.js vercel --skip-tests",
