--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "/"
   command = "./netlify.sh"
-  publish = ".next"
+  publish = "out"
   ignore = "git diff --quiet HEAD^ HEAD -- . ':!node_modules'"
 
 [build.environment]
