--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.21",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
@@ -113,7 +112,13 @@
     "twilio": "^4.11.0",
     "typescript": "^5.3.3",
     "yup": "^1.3.2",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
+    "postcss-preset-env": "^10.1.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "autoprefixer": "^10.4.21",
+    "cssnano": "^7.0.6"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250430.0",
@@ -121,7 +126,6 @@
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.5.1",
     "babel-jest": "^29.7.0",
-    "cssnano": "^7.0.6",
     "cypress": "^13.17.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.0.4",
@@ -136,11 +140,7 @@
     "lint-staged": "^15.2.0",
     "msw": "^2.0.11",
     "nodemon": "^3.0.2",
-    "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-import": "^16.1.0",
-    "postcss-preset-env": "^10.1.6",
     "prettier": "^3.1.1",
     "styled-components": "^6.1.8",
     "stylelint": "^16.2.1",
