--- a/package.json
+++ b/package.json
@@ -118,7 +118,8 @@
     "postcss-preset-env": "^10.1.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "autoprefixer": "^10.4.21",
-    "cssnano": "^7.0.6"
+    "cssnano": "^7.0.6",
+    "postcss-cli": "^11.0.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250430.0",
@@ -140,7 +141,6 @@
     "lint-staged": "^15.2.0",
     "msw": "^2.0.11",
     "nodemon": "^3.0.2",
-    "postcss-cli": "^11.0.1",
     "prettier": "^3.1.1",
     "styled-components": "^6.1.8",
     "stylelint": "^16.2.1",
