Fix: Update script paths to use correct Scripts/ directory (uppercase) and implement context-aware cursor system
- Fixed package.json script paths from scripts/ to Scripts/ to resolve Netlify deployment error
- Implemented comprehensive context-aware cursor states for enhanced user interaction
- Added CTA button cursor (20px → 30px glow), navigation arrows, text I-beam, zoom icons
- Enhanced form interactions with drag, upload, loading, and validation states
- Added 60fps GSAP animations with accessibility support and touch device detection
- Created cursor-context-demo page for testing all cursor states
- Added comprehensive test suite with 16/17 tests passing
- Maintains futuristic AI theme with #121212/#00d4ff/#7b2cbf color scheme

--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
     "test:coverage": "jest --coverage",
     "test:e2e": "node tests/e2e/cursor-e2e.js",
     "test:e2e:open": "cypress open",
-    "generate-sitemap": "node scripts/generate-sitemap.js",
+    "generate-sitemap": "node Scripts/generate-sitemap.js",
     "api": "node api-server.js",
     "api:dev": "nodemon api-server.js",
-    "deploy": "./scripts/deploy.sh",
-    "deploy:staging": "./scripts/deploy.sh staging",
-    "deploy:production": "./scripts/deploy.sh production",
-    "deploy:frontend": "./scripts/deploy.sh production frontend",
-    "deploy:backend": "./scripts/deploy.sh production backend",
-    "deploy:hotfix": "./scripts/deploy.sh production all --skip-tests",
+    "deploy": "./Scripts/deploy.sh",
+    "deploy:staging": "./Scripts/deploy.sh staging",
+    "deploy:production": "./Scripts/deploy.sh production",
+    "deploy:frontend": "./Scripts/deploy.sh production frontend",
+    "deploy:backend": "./Scripts/deploy.sh production backend",
+    "deploy:hotfix": "./Scripts/deploy.sh production all --skip-tests",
     "docker:build": "docker build -t digiclick-ai .",
     "docker:run": "docker run -p 3000:3000 digiclick-ai",
     "docker:dev": "docker-compose up --build",
     "docker:prod": "docker-compose -f docker-compose.prod.yml up --build",
     "health-check": "curl -f http://localhost:3000/api/health || exit 1",
-    "setup": "node scripts/setup-env.js",
-    "setup:production": "NODE_ENV=production node scripts/setup-env.js",
+    "setup": "node Scripts/setup-env.js",
+    "setup:production": "NODE_ENV=production node Scripts/setup-env.js",
     "validate-env": "node -e \"require('./utils/env-validation').validateAndExit()\"",
     "precommit": "lint-staged",
     "prepare": "echo 'Skipping husky install in production'",
@@ -44,16 +44,16 @@
     "test:accessibility": "node tests/accessibility/cursor-a11y.js",
     "test:cross-device": "node tests/cross-device/device-tests.js",
     "test:all": "npm run test && npm run test:performance && npm run test:e2e && npm run test:accessibility",
-    "check:cursor": "node scripts/check-cursor.js",
-    "deploy:verify": "node scripts/verify-deployment.js",
-    "deploy:monitor": "node scripts/deployment-monitor.js",
+    "check:cursor": "node Scripts/check-cursor.js",
+    "deploy:verify": "node Scripts/verify-deployment.js",
+    "deploy:monitor": "node Scripts/deployment-monitor.js",
     "deploy:health": "curl -f $NEXT_PUBLIC_APP_URL/api/health-check",
     "performance:check": "npm run deploy:verify",
-    "deploy:vercel": "node scripts/deploy.js vercel",
-    "deploy:netlify": "node scripts/deploy.js netlify",
-    "deploy:skip-tests": "node scripts/deploy.js vercel --skip-tests",
+    "deploy:vercel": "node Scripts/deploy.js vercel",
+    "deploy:netlify": "node Scripts/deploy.js netlify",
+    "deploy:skip-tests": "node Scripts/deploy.js vercel --skip-tests",
     "build:analyze": "ANALYZE=true npm run build",
-    "sitemap:generate": "node scripts/generate-sitemap.js",
+    "sitemap:generate": "node Scripts/generate-sitemap.js",
     "performance:test": "echo 'Performance testing temporarily disabled for deployment'",
     "cursor:demo": "echo 'Visit http://localhost:3000/cursor-demo to test cursor functionality'",
     "postbuild": "npm run sitemap:generate"
