--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "msw": "^2.0.11",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
+    "puppeteer": "^21.6.1",
     "styled-components": "^6.1.8",
     "stylelint": "^16.2.1",
     "stylelint-config-recommended": "^14.0.0",
