Implement comprehensive performance optimization for Lighthouse ≥90 and 60fps cursor performance
- Added bundle size analysis and optimization with webpack-bundle-analyzer integration
- Implemented conditional GSAP loading based on A/B variant and device type (Enhanced/Gaming only)
- Created optimized particles.js loader with lazy loading and CSS fallbacks
- Added WebP image optimization component with JPEG fallbacks and responsive loading
- Enhanced cursor variant manager with dynamic imports and Suspense for code splitting
- Optimized Next.js configuration with performance-focused webpack settings and chunk splitting
- Created performance optimization script with automated analysis and recommendations
- Added comprehensive performance monitoring integration with Core Web Vitals tracking
- Implemented variant-specific performance budgets: Control (50KB), Enhanced (75KB), Minimal (30KB), Gaming (100KB)
- Enhanced package.json with performance optimization scripts and development dependencies
- Added Sentry integration for performance issue tracking and error monitoring
- Created comprehensive performance optimization documentation with targets and achievements
- Implemented touch device detection to skip cursor loading on mobile devices
- Added fallback cursor behavior for GSAP loading failures
- Optimized bundle splitting with separate chunks for GSAP, particles.js, and cursor variants
- Target achievements: FCP <2.5s, LCP <4.0s, CLS <0.1, 60fps cursor performance across all variants

--- a/package.json
+++ b/package.json
@@ -56,7 +56,15 @@
     "sitemap:generate": "node Scripts/generate-sitemap.js",
     "performance:test": "echo 'Performance testing temporarily disabled for deployment'",
     "cursor:demo": "echo 'Visit http://localhost:3000/cursor-demo to test cursor functionality'",
-    "postbuild": "npm run sitemap:generate"
+    "postbuild": "npm run sitemap:generate",
+    "optimize": "node scripts/performance-optimizer.js",
+    "bundle-analyze": "node scripts/bundle-analyzer.js",
+    "perf-audit": "lighthouse http://localhost:3000 --output=json --output-path=./reports/lighthouse-audit.json",
+    "perf-test": "npm run build && npm run perf-audit",
+    "optimize-images": "node scripts/optimize-images.js",
+    "test:performance:full": "npm run build && npm run optimize && npm run perf-audit",
+    "analyze:bundle": "ANALYZE=true npm run build",
+    "monitor:performance": "node scripts/continuous-monitoring.js"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -148,6 +156,15 @@
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-order": "^6.0.4",
-    "supertest": "^7.1.0"
+    "supertest": "^7.1.0",
+    "webpack-bundle-analyzer": "^4.10.1",
+    "lighthouse": "^11.4.0",
+    "@sentry/nextjs": "^7.99.0",
+    "web-vitals": "^3.5.2",
+    "babel-plugin-transform-imports": "^2.0.0",
+    "imagemin": "^8.0.1",
+    "imagemin-webp": "^8.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^10.0.0"
   }
 }
